--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Flappy Bird</title>
     <link rel="stylesheet" href="style.css">
+    <script src="utils.js" charset="utf-8"></script>
     <script src="app.js" charset="utf-8"></script>
   </head>
   <body>
